Fix: Improve accessibility with review stars contrast on review pages.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -383,6 +383,11 @@ td > img,
     width: 104px;
 }
 
+.form-row fieldset > div {
+    background-color: #3A5A40;
+    border-radius: var(--bs-border-radius);
+}
+
 /* Smaller font size on mobiles for service names
    in checkout cart summary */
 @media (max-width: 473px) {
